# git-dumper

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml
src/: dump_git.rs  git_parsing.rs  main.rs
test-data/: object-commit  object-tree
