[package]
name = "git-dumper"
version = "0.1.0"
edition = "2021"
description = "A tool to dump exposed .git directories"
license = "MIT"
repository = "https://github.com/HoLLy-HaCKeR/git-dumper"
keywords = ["git", "security", "scrapers"]
categories = ["command-line-utilities"]
exclude = [ "test-data" ]

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2", features = ["cargo"] }
hyper = { version = "0.14", features = ["http1", "http2", "client", "runtime"] }
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
miniz_oxide = "0.6.2"
regex = "1.6"
tokio = { version = "1.21", features = ["net", "sync", "rt", "rt-multi-thread", "macros"] }
